--- a/api/.settings/org.eclipse.wst.common.component
+++ b/api/.settings/org.eclipse.wst.common.component
@@ -4,8 +4,8 @@
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/resources"/>
         <property name="java-output-path" value="/lollipop/target/classes"/>
-        <property name="context-root" value="rodolphe"/>
+        <property name="context-root" value="rodolphe-demo"/>
     </wb-module>
 </project-modules>
