Adding Casting Table to the model.

--- a/api/src/main/webapp/static/stylesheets/app.css
+++ b/api/src/main/webapp/static/stylesheets/app.css
@@ -127,11 +127,12 @@
 }
 #container {
   margin-left: 100px;
-  padding: 0 0 0 10px;
+  padding: 0;
 }
 #header {
-  height: 100px;
+  height: 80px;
   text-align: right;
+  border-bottom: 2px #909090 solid;
 }
 #header img {
   float: right;
@@ -142,6 +143,7 @@
 }
 #page {
   background: #ffffff;
+  margin-top: 20px;
   padding: 10px;
 }
 
