--- a/ui/app/styles/page.less
+++ b/ui/app/styles/page.less
@@ -18,11 +18,12 @@
 }
 #container {
   margin-left: @sidebar-width;
-  padding:0 0 0 10px;
+  padding:0;
 }
 #header {
-  height: @sidebar-width;
+  height: 80px;
   text-align: right;
+  border-bottom: 2px #909090 solid;
 }
 #header img {
   float: right;
@@ -33,5 +34,6 @@
 }
 #page {
   background: #ffffff;
+  margin-top: 20px;
   padding: 10px;
 }
