--- a/ui/app/styles/page.less
+++ b/ui/app/styles/page.less
@@ -1,5 +1,8 @@
 @sidebar-width:100px;
 
+body{
+  background-color: #EEEEEE;
+}
 #leftMenu {
   height: 100%;
   width: @sidebar-width;
@@ -15,6 +18,14 @@
   height: 60px;
   margin: 10px;
   border: 1px dashed white;
+  cursor: pointer;
+}
+#logo, #search {
+  width: @sidebar-width;
+  cursor: pointer;
+}
+#logo:hover, #search:hover {
+  background-color: #EEEEEE;
 }
 #container {
   margin-left: @sidebar-width;
@@ -23,7 +34,7 @@
 #header {
   height: 80px;
   text-align: right;
-  border-bottom: 2px #909090 solid;
+  border-bottom: 1px #c3c3c3 solid;
 }
 #header img {
   float: right;
