--- a/api/src/main/webapp/static/stylesheets/app.css
+++ b/api/src/main/webapp/static/stylesheets/app.css
@@ -345,6 +345,52 @@ ul.selection-list {
   width: 32px;
   height: 32px;
 }
+.movieView {
+  background-color: white;
+  float: left;
+  width: 100%;
+  border: solid 1px;
+}
+.movieCartridge {
+  width: 30%;
+  float: right;
+}
+.movieCartridge .header {
+  background-color: #EEECE1;
+  height: 150px;
+  border: solid 1px;
+}
+.movieCartridge .header .picture {
+  float: left;
+  background-image: url("../img/logoMovie.png");
+  width: 100px;
+  height: 100px;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  margin: 20px 20px;
+}
+.movieCartridge .header .title {
+  padding-top: 30px;
+  font-weight: bold;
+  font-size: 18px;
+}
+.movieCartridge .field {
+  background-color: #F2F2F2;
+  float: left;
+  width: 100%;
+  padding: 10px;
+  border: solid 1px;
+  border-top: none;
+}
+.movieCartridge .field .title {
+  width: 30%;
+  float: left;
+}
+.movieCartridge .field .content {
+  width: 70%;
+  float: right;
+}
+
 body {
   background-color: #EEEEEE;
   font-family: "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", Calibri, Helvetica, Arial;
@@ -393,6 +439,8 @@ body {
 #page {
   margin: 0;
   padding: 10px;
+  float: left;
+  width: 100%;
 }
 .title-level-1 {
   font-size: 16px;
