Restructuration de la MovieView

--- a/api/src/main/webapp/static/stylesheets/app.css
+++ b/api/src/main/webapp/static/stylesheets/app.css
@@ -385,6 +385,7 @@ ul.selection-list {
 .movieCartridge .field .title {
   width: 30%;
   float: left;
+  font-weight: bold;
 }
 .movieCartridge .field .content {
   width: 70%;
