--- a/ui/app/styles/movie.less
+++ b/ui/app/styles/movie.less
@@ -1,19 +1,20 @@
-.movieView {
+.movieDetails {
   background-color: white;
-  float: left;
-  width: 100%;
+  float: right;
+  width: 85%;
   border: solid 1px;
 }
 
 .movieCartridge {
   width: 30%;
   float: right;
+  border-left: solid 1px;
 }
 
 .movieCartridge .header {
   background-color: #EEECE1;
   height: 150px;
-  border: solid 1px;
+  border-bottom: solid 1px;
 }
 
 .movieCartridge .header .picture {
@@ -37,8 +38,7 @@
   float: left;
   width: 100%;
   padding: 10px;
-  border: solid 1px;
-  border-top: none;
+  border-bottom: solid 1px;
 }
 
 .movieCartridge .field .title{
@@ -50,4 +50,13 @@
 .movieCartridge .field .content{
   width: 70%;
   float: right;
+}
+
+#slidingContent {
+  width: 70%;
+  float: left;
+}
+
+#slidingContent .slidingBloc {
+  border-bottom: solid 1px;
 }
