--- a/ui/app/styles/page.less
+++ b/ui/app/styles/page.less
@@ -35,17 +35,11 @@ body{
   padding:0;
 }
 #header {
-  height: 80px;
-  text-align: right;
-  border-bottom: 1px @border-color solid;
+  height: 20px;
+  /*text-align: right;
+  border-bottom: 1px @border-color solid;*/
 }
-#header img {
-  float: right;
-  width: 60px;
-  height: 60px;
-  margin: 10px;
-  border: 1px dashed white;
-}
+
 #page {
   margin: 0;
   padding: 10px;
