--- a/ui/app/styles/movie.less
+++ b/ui/app/styles/movie.less
@@ -1,12 +1,12 @@
 .movieDetails {
   background-color: white;
   float: right;
-  width: 85%;
+  width: 85%;//85%
   border: solid 1px;
 }
 
-.movieCartridge {
-  width: 30%;
+.movieCartridgeCss {
+  width: 454px;//30%
   float: right;
   border-left: solid 1px;
 }
@@ -19,11 +19,8 @@
 
 .movieCartridge .header .picture {
   float: left;
-  background-image: url("../img/logoMovie.png");
   width: 100px;
   height: 100px;
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
   margin: 20px 20px;
 }
 
@@ -52,11 +49,47 @@
   float: right;
 }
 
-#slidingContent {
+.slidingContentCss {
   width: 70%;
   float: left;
+}
+.slidingContentCss h3 {
+  color: grey;
+  margin-left: 20px;
 }
 
 #slidingContent .slidingBloc {
   border-bottom: solid 1px;
+}
+
+.sticky-navigation {
+  background-color: white;
+  width: 13%;
+  padding-left: 20px;
+}
+
+.sticky-navigation a {
+  color: black;
+}
+
+.sticky-navigation a:hover,.sticky-navigation a:focus{
+  color: purple;
+}
+
+.peopleCard {
+  background-color: #E0E0E0;
+  height: 70px;
+  margin: 20px;
+  padding: 10px;
+}
+
+.peopleCard .picture {
+  float: left;
+  width: 50px;
+  height: 50px;
+  margin-right: 20px;
+}
+.peopleCard .name {
+  font-weight: bold;
+  font-size: 20px;
 }
