--- a/ui/app/styles/search.less
+++ b/ui/app/styles/search.less
@@ -15,9 +15,6 @@
 .resultContainer{
   width:50% !important;
 }
-.item:hover{
-  background: #d8e5fa;
-}
 
 #lineResume{
   margin-left: 10px;
@@ -57,4 +54,18 @@
   font-size: 16px;
   text-transform: uppercase;
   color: #acacac;
+}
+
+ul.selection-list li.sl-line div.sl-selection {
+  background-color: #fff;
+  min-height: 60px;
+}
+
+ul.selection-list li.sl-line {
+  padding-left: 10px;
+  min-height: 60px;
+}
+
+ul.selection-list li.sl-line:hover {
+  background: #d8e5fa;
 }
