Update search view.

--- a/api/src/main/webapp/static/stylesheets/app.css
+++ b/api/src/main/webapp/static/stylesheets/app.css
@@ -630,6 +630,9 @@ body {
 .resultContainer {
   width: 50% !important;
 }
+.search-panel {
+  width: 60% !important;
+}
 #lineResume {
   margin-left: 10px;
   display: inline-block;
