--- a/ui/app/styles/search.less
+++ b/ui/app/styles/search.less
@@ -8,12 +8,12 @@
   height: 40px;
   margin: 5px 5px 0 0;
 }
-.user-logo {
-
-}
 
 .resultContainer{
   width:50% !important;
+}
+.search-panel {
+  width:60% !important;
 }
 
 #lineResume{
