--- a/ui/app/styles/detail.less
+++ b/ui/app/styles/detail.less
@@ -49,6 +49,12 @@
   float: right;
 }
 
+.cartridge .header .link {
+  float: left;
+  margin-top: 120px;
+  margin-left: -85px;
+}
+
 .slidingContentCss {
   width: 70%;
   float: left;
@@ -58,7 +64,7 @@
   margin-left: 20px;
 }
 
-#slidingContent .slidingBloc {
+.slidingContentCss .slidingBloc {
   border-bottom: solid 1px;
 }
 
@@ -93,4 +99,8 @@
 .slidingContentCss .card .name {
   font-weight: bold;
   font-size: 20px;
+}
+
+.slidingContentCss .noBorderBottom {
+  border-bottom: none;
 }
