--- a/api/src/main/webapp/static/stylesheets/app.css
+++ b/api/src/main/webapp/static/stylesheets/app.css
@@ -187,7 +187,8 @@ ul.selection-list {
       z-index: 1;
       height: 100%;
       width: 50px;
-      display: none; }
+      display: none;
+      background-color: #fff; }
     ul.selection-list li.sl-line div.sl-actions {
       position: absolute;
       top: 0px;
@@ -208,6 +209,15 @@ ul.selection-list {
     ul.selection-list li.sl-button a, ul.selection-list li.sl-button button {
       position: absolute;
       right: 0px; }
+
+.print {
+  background: url("../img/print.svg") no-repeat center; }
+
+.list-summary .nb-result, .list-summary .scope, .list-summary .print {
+  float: left; }
+
+.popin {
+  display: block; }
 
 /** css from : http://codepen.io/betdream/details/Ifvbi**/
 .timeline {
@@ -325,15 +335,6 @@ ul.selection-list {
 
 .timeline-body > p + p {
   margin-top: 5px; }
-
-.print {
-  background: url("../img/print.svg") no-repeat center; }
-
-.list-summary .nb-result, .list-summary .scope, .list-summary .print {
-  float: left; }
-
-.popin {
-  display: block; }
 
 .icon {
   float: left;
@@ -517,6 +518,11 @@ ul.selection-list {
   width: 70%;
   float: right;
 }
+.cartridge .header .link {
+  float: left;
+  margin-top: 120px;
+  margin-left: -85px;
+}
 .slidingContentCss {
   width: 70%;
   float: left;
@@ -525,7 +531,7 @@ ul.selection-list {
   color: grey;
   margin-left: 20px;
 }
-#slidingContent .slidingBloc {
+.slidingContentCss .slidingBloc {
   border-bottom: solid 1px;
 }
 .sticky-navigation {
@@ -556,6 +562,9 @@ ul.selection-list {
 .slidingContentCss .card .name {
   font-weight: bold;
   font-size: 20px;
+}
+.slidingContentCss .noBorderBottom {
+  border-bottom: none;
 }
 
 body {
