--- a/ui/app/styles/page.less
+++ b/ui/app/styles/page.less
@@ -5,6 +5,7 @@
 body{
   background-color: #EEEEEE;
   font-family: "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", Calibri, Helvetica, Arial;
+  width: 1903px;
 }
 #leftMenu {
   height: 100%;
@@ -41,7 +42,7 @@ body{
 }
 
 #page {
-  margin: 0;
+  margin-right: 4px;
   padding: 10px;
 }
 
