--- a/ui/app/styles/search.less
+++ b/ui/app/styles/search.less
@@ -70,3 +70,29 @@ ul.selection-list li.sl-line {
 ul.selection-list li.sl-line:hover {
   background: #d8e5fa;
 }
+
+.linkFilterResult {
+  text-align: right;
+  padding-right: 10px;
+  float: right;
+}
+.linkFilterResult a {
+  text-decoration: none;
+  padding: 5px;
+  border: 1px solid #c4c4c4;
+  background: #f5f5f5;
+}
+
+.results {
+  text-align: left;
+  padding-left: 10px;
+  float: left;
+}
+
+.summary{
+  background: #ffffff;
+  display: list-item;
+  padding: 10px 0;
+  font-size: 14px;
+  font-weight: bold;
+}
