--- a/api/src/main/webapp/static/stylesheets/app.css
+++ b/api/src/main/webapp/static/stylesheets/app.css
@@ -213,8 +213,16 @@ ul.selection-list {
 .print {
   background: url("../img/print.svg") no-repeat center; }
 
-.list-summary .nb-result, .list-summary .scope, .list-summary .print {
-  float: left; }
+.list-summary .nb-result, .list-summary .scope {
+  display: inline-block;
+  padding: 0 25px 0 25px; }
+.list-summary .print {
+  display: inline-block;
+  float: right;
+  padding: 0 25px 0 25px; }
+
+.popin {
+  display: block; }
 
 /** css from : http://codepen.io/betdream/details/Ifvbi**/
 .timeline {
@@ -332,9 +340,6 @@ ul.selection-list {
 
 .timeline-body > p + p {
   margin-top: 5px; }
-
-.popin {
-  display: block; }
 
 .icon {
   float: left;
@@ -477,14 +482,19 @@ ul.selection-list {
 }
 .details {
   background-color: white;
-  float: right;
-  width: 85%;
   border: solid 1px;
+  margin-left: 260px;
+  position: relative;
+  float: left;
+  width: 86%;
 }
 .cartridgeCss {
   width: 454px;
+  border: solid 1px;
+  border-bottom: none;
+  position: absolute;
+  margin-left: 1336px;
   float: right;
-  border-left: solid 1px;
 }
 .cartridge .header {
   background-color: #EEECE1;
@@ -523,20 +533,19 @@ ul.selection-list {
   margin-top: 120px;
   margin-left: -85px;
 }
-.slidingContentCss {
-  width: 70%;
-  float: left;
+#slidingContent {
+  position: relative;
 }
-.slidingContentCss h3 {
+#slidingContent h3 {
   color: grey;
   margin-left: 20px;
 }
-.slidingContentCss .slidingBloc {
+#slidingContent .slidingBloc {
   border-bottom: solid 1px;
 }
 .sticky-navigation {
   background-color: white;
-  width: 13%;
+  width: 250px;
   padding-left: 20px;
 }
 .sticky-navigation a {
@@ -546,30 +555,35 @@ ul.selection-list {
 .sticky-navigation a:focus {
   color: purple;
 }
-.slidingContentCss .card {
+#slidingContent .card {
   background-color: #E0E0E0;
-  height: 70px;
-  margin: 10px 20px;
-  padding: 10px;
+  margin: 0 20px;
   width: 900px;
+  padding: 5px 10px;
 }
-.slidingContentCss .card .picture {
+#slidingContent .card .picture {
   float: left;
   width: 50px;
   height: 50px;
   margin-right: 20px;
 }
-.slidingContentCss .card .name {
+#slidingContent .card .name {
   font-weight: bold;
   font-size: 20px;
+  color: #953737;
 }
-.slidingContentCss .noBorderBottom {
+#slidingContent .card.middleName {
+  font-weight: bold;
+  font-size: 16px;
+}
+#slidingContent .noBorderBottom {
   border-bottom: none;
 }
 
 body {
   background-color: #EEEEEE;
   font-family: "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", Calibri, Helvetica, Arial;
+  width: 1903px;
 }
 #leftMenu {
   height: 100%;
@@ -606,7 +620,7 @@ body {
   border-bottom: 1px @border-color solid;*/
 }
 #page {
-  margin: 0;
+  margin-right: 4px;
   padding: 10px;
 }
 .title-level-1 {
