--- a/ui/app/styles/detail.less
+++ b/ui/app/styles/detail.less
@@ -117,3 +117,18 @@
 #slidingContent .noBorderBottom {
   border-bottom: none;
 }
+
+.slidingBloc button.btn.btn-raised.btn-primary {
+  margin-top: -30px;
+  margin-right: 450px;
+  position: relative;
+  float: right;
+}
+
+.slidingBloc ul.selection-list li.sl-line:hover {
+  background: none;
+}
+
+.slidingBloc ul.selection-list li.sl-line {
+  cursor: auto;
+}
