Serach view : group by.

--- a/ui/app/styles/search.less
+++ b/ui/app/styles/search.less
@@ -10,8 +10,13 @@
 }
 
 .resultContainer{
-  width:50% !important;
+  width:85% !important;
 }
+
+.liveFilter{
+  width:15% !important;
+}
+
 .search-panel {
   width:60% !important;
   float: left;
@@ -95,4 +100,17 @@ ul.selection-list li.sl-line:hover {
   padding: 10px 0;
   font-size: 14px;
   font-weight: bold;
+}
+
+.qs-scope-MOVIE {
+  background: url('./../img/film.svg') no-repeat center center;
+  background-size: 100% 100%;
+}
+.qs-scope-PEOPLE {
+  background: url('./../img/user.svg') no-repeat center center;
+  background-size: 100% 100%;
+}
+.qs-scope-ALL {
+  background: url('./../img/qs-none.svg') no-repeat center center;
+  background-size: 100% 100%;
 }
