--- a/api/src/main/webapp/static/stylesheets/app.css
+++ b/api/src/main/webapp/static/stylesheets/app.css
@@ -1,6 +1,135 @@
 div[data-component] {
   color: red; }
 
+.live-filter.expanded {
+  width: 250px; }
+
+.live-filter {
+  min-height: 400px; }
+  .live-filter .icon {
+    float: right;
+    height: inherit; }
+  .live-filter .facet.selected .panel-heading {
+    background-image: url("../img/cross.svg");
+    background-repeat: no-repeat;
+    background-position: right center; }
+  .live-filter .facet.unselected .panel-heading {
+    background-repeat: no-repeat;
+    background-position: right center; }
+  .live-filter .facet .panel-heading {
+    cursor: pointer; }
+  .live-filter .facet ul {
+    list-style-type: none; }
+  .live-filter .facet li {
+    cursor: pointer; }
+  .live-filter .facet li:hover {
+    color: #E6E6E6; }
+
+.chevron-thin-left {
+  background: url("../img/chevron-thin-left.svg") no-repeat right center; }
+
+.chevron-thin-right {
+  background: url("../img/chevron-thin-right.svg") no-repeat right center; }
+
+/* Style for the quick-search-component*/
+/* Variables*/
+/* Style */
+div.qs-quick-search {
+  width: 100%;
+  position: relative;
+  height: 70px;
+  /* Input block */
+  /* Help block.*/ }
+  div.qs-quick-search div.qs-scope {
+    width: 70px;
+    height: 35px;
+    background-color: #595959;
+    padding-top: 6px;
+    padding-right: 12px;
+    padding-bottom: 6px;
+    padding-left: 12px;
+    padding: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1; }
+    div.qs-quick-search div.qs-scope > div {
+      padding: 4px 25px 4px 2px; }
+    div.qs-quick-search div.qs-scope div {
+      color: white;
+      text-align: center;
+      height: 100%; }
+      div.qs-quick-search div.qs-scope div.qs-icon > div {
+        background-size: 22px; }
+      div.qs-quick-search div.qs-scope div.qs-scope-deploy-up {
+        background: url('../img/arrow-up.svg') no-repeat center right; }
+      div.qs-quick-search div.qs-scope div.qs-scope-deploy-down {
+        background: url('../img/arrow-down.svg') no-repeat center right; }
+      div.qs-quick-search div.qs-scope div div {
+        /*padding-top: 3px;
+        padding-right: 3px;
+        padding-bottom: 3px;
+        padding-left: 3px;*/
+        border: 2px solid white; }
+        div.qs-quick-search div.qs-scope div div {
+          /*width:100%;
+          height:100%;*/
+          border: none; }
+        div.qs-quick-search div.qs-scope div div.qs-scope-none {
+          background: url('../img/qs-none.svg') no-repeat center center;
+          background-size: 100% 100%; }
+    div.qs-quick-search div.qs-scope ul {
+      position: absolute;
+      font-size: 12pt;
+      background-color: #595959;
+      padding: 10px; }
+      div.qs-quick-search div.qs-scope ul li {
+        background-position: center left 5px;
+        list-style-type: none;
+        color: white;
+        height: 32px;
+        line-height: 32px;
+        min-width: 120px;
+        padding-left: 40px;
+        background-size: 22px;
+        font-size: 14px;
+        cursor: pointer; }
+        div.qs-quick-search div.qs-scope ul li:hover {
+          background-color: rgba(141, 134, 134, 0.62); }
+        div.qs-quick-search div.qs-scope ul li.active {
+          font-weight: bold; }
+  div.qs-quick-search input[type=search] {
+    padding-top: 6px;
+    padding-right: 12px;
+    padding-bottom: 6px;
+    padding-left: 70px;
+    width: 100%;
+    height: 35px;
+    position: absolute;
+    top: 0;
+    left: 0; }
+    div.qs-quick-search input[type=search].qs-loading {
+      background: #FFF url(../img/loading.gif) no-repeat right center; }
+  div.qs-quick-search div.qs-help {
+    z-index: 2;
+    position: relative;
+    top: 40px;
+    padding-left: 45px;
+    left: 50px;
+    background: url('../img/help-arrow.svg') no-repeat center left; }
+
+.qs-scope-1 {
+  background: url('../img/earth.svg') no-repeat center center; }
+
+.qs-scope-2 {
+  background: url('../img/user.svg') no-repeat center center; }
+
+.qs-scope-3 {
+  background: url('../img/rocket.svg') no-repeat center center; }
+
+.qs-scope-none {
+  background: url('../img/qs-none.svg') no-repeat center center; }
+
 .checkbox-unchecked {
   background: url("../img/checkbox-unchecked.svg") no-repeat center; }
 
@@ -80,6 +209,17 @@ ul.selection-list {
     ul.selection-list li.sl-button a, ul.selection-list li.sl-button button {
       position: absolute;
       right: 0px; }
+
+.print {
+  background: url("../img/print.svg") no-repeat center; }
+
+.list-summary .nb-result, .list-summary .scope {
+  display: inline-block;
+  padding: 0 25px 0 25px; }
+.list-summary .print {
+  display: inline-block;
+  float: right;
+  padding: 0 25px 0 25px; }
 
 /** css from : http://codepen.io/betdream/details/Ifvbi**/
 .timeline {
@@ -198,47 +338,6 @@ ul.selection-list {
 .timeline-body > p + p {
   margin-top: 5px; }
 
-.print {
-  background: url("../img/print.svg") no-repeat center; }
-
-.list-summary .nb-result, .list-summary .scope {
-  display: inline-block;
-  padding: 0 25px 0 25px; }
-.list-summary .print {
-  display: inline-block;
-  float: right;
-  padding: 0 25px 0 25px; }
-
-.live-filter.expanded {
-  width: 250px; }
-
-.live-filter {
-  min-height: 400px; }
-  .live-filter .icon {
-    float: right;
-    height: inherit; }
-  .live-filter .facet.selected .panel-heading {
-    background-image: url("../img/cross.svg");
-    background-repeat: no-repeat;
-    background-position: right center; }
-  .live-filter .facet.unselected .panel-heading {
-    background-repeat: no-repeat;
-    background-position: right center; }
-  .live-filter .facet .panel-heading {
-    cursor: pointer; }
-  .live-filter .facet ul {
-    list-style-type: none; }
-  .live-filter .facet li {
-    cursor: pointer; }
-  .live-filter .facet li:hover {
-    color: #E6E6E6; }
-
-.chevron-thin-left {
-  background: url("../img/chevron-thin-left.svg") no-repeat right center; }
-
-.chevron-thin-right {
-  background: url("../img/chevron-thin-right.svg") no-repeat right center; }
-
 .popin {
   display: block;
   float: right; }
@@ -248,118 +347,19 @@ ul.selection-list {
   .popin .centered {
     height: 80vh; }
 
-/* Style for the quick-search-component*/
-/* Variables*/
-/* Style */
-div.qs-quick-search {
-  width: 100%;
-  position: relative;
-  height: 70px;
-  /* Input block */
-  /* Help block.*/ }
-  div.qs-quick-search div.qs-scope {
-    width: 70px;
-    height: 35px;
-    background-color: #595959;
-    padding-top: 6px;
-    padding-right: 12px;
-    padding-bottom: 6px;
-    padding-left: 12px;
-    padding: 0;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 1; }
-    div.qs-quick-search div.qs-scope > div {
-      padding: 4px 25px 4px 2px; }
-    div.qs-quick-search div.qs-scope div {
-      color: white;
-      text-align: center;
-      height: 100%; }
-      div.qs-quick-search div.qs-scope div.qs-icon > div {
-        background-size: 22px; }
-      div.qs-quick-search div.qs-scope div.qs-scope-deploy-up {
-        background: url('../img/arrow-up.svg') no-repeat center right; }
-      div.qs-quick-search div.qs-scope div.qs-scope-deploy-down {
-        background: url('../img/arrow-down.svg') no-repeat center right; }
-      div.qs-quick-search div.qs-scope div div {
-        /*padding-top: 3px;
-        padding-right: 3px;
-        padding-bottom: 3px;
-        padding-left: 3px;*/
-        border: 2px solid white; }
-        div.qs-quick-search div.qs-scope div div {
-          /*width:100%;
-          height:100%;*/
-          border: none; }
-        div.qs-quick-search div.qs-scope div div.qs-scope-none {
-          background: url('../img/qs-none.svg') no-repeat center center;
-          background-size: 100% 100%; }
-    div.qs-quick-search div.qs-scope ul {
-      position: absolute;
-      font-size: 12pt;
-      background-color: #595959;
-      padding: 10px; }
-      div.qs-quick-search div.qs-scope ul li {
-        background-position: center left 5px;
-        list-style-type: none;
-        color: white;
-        height: 32px;
-        line-height: 32px;
-        min-width: 120px;
-        padding-left: 40px;
-        background-size: 22px;
-        font-size: 14px;
-        cursor: pointer; }
-        div.qs-quick-search div.qs-scope ul li:hover {
-          background-color: rgba(141, 134, 134, 0.62); }
-        div.qs-quick-search div.qs-scope ul li.active {
-          font-weight: bold; }
-  div.qs-quick-search input[type=search] {
-    padding-top: 6px;
-    padding-right: 12px;
-    padding-bottom: 6px;
-    padding-left: 70px;
-    width: 100%;
-    height: 35px;
-    position: absolute;
-    top: 0;
-    left: 0; }
-    div.qs-quick-search input[type=search].qs-loading {
-      background: #FFF url(../img/loading.gif) no-repeat right center; }
-  div.qs-quick-search div.qs-help {
-    z-index: 2;
-    position: relative;
-    top: 40px;
-    padding-left: 45px;
-    left: 50px;
-    background: url('../img/help-arrow.svg') no-repeat center left; }
-
-.qs-scope-1 {
-  background: url('../img/earth.svg') no-repeat center center; }
-
-.qs-scope-2 {
-  background: url('../img/user.svg') no-repeat center center; }
-
-.qs-scope-3 {
-  background: url('../img/rocket.svg') no-repeat center center; }
-
-.qs-scope-none {
-  background: url('../img/qs-none.svg') no-repeat center center; }
-
 .icon {
   float: left;
   width: 40px;
   height: 40px;
   cursor: pointer; }
 
-.sticky-navigation li.active {
-  font-weight: bold; }
-
 .dots-three-vertical {
   background: url("../img/dots-three-vertical.svg") no-repeat center; }
 
 .select-action li.selected a {
+  font-weight: bold; }
+
+.sticky-navigation li.active {
   font-weight: bold; }
 
 .topic-displayer .topic {
@@ -584,6 +584,18 @@ div.qs-quick-search {
 }
 #slidingContent .noBorderBottom {
   border-bottom: none;
+}
+.slidingBloc button.btn.btn-raised.btn-primary {
+  margin-top: 0;
+  margin-left: 900px;
+  position: relative;
+  margin-bottom: 0px;
+}
+.slidingBloc ul.selection-list li.sl-line:hover {
+  background: none;
+}
+.slidingBloc ul.selection-list li.sl-line {
+  cursor: auto;
 }
 
 body {
