Dev search View.

--- a/ui/app/styles/search.less
+++ b/ui/app/styles/search.less
@@ -17,8 +17,8 @@
   width:15% !important;
 }
 
-.search-panel {
-  width:60% !important;
+.search-part {
+  width:63% !important;
   float: left;
 }
 
