--- a/ui/app/styles/search.less
+++ b/ui/app/styles/search.less
@@ -9,6 +9,12 @@
   margin: 5px 5px 0 0;
 }
 
+.welcome-title {
+  text-align: center;
+  font-size: 45px;
+  color: #1A3481;
+}
+
 .resultContainer{
   width:85% !important;
 }
@@ -96,7 +102,8 @@ ul.selection-list li.sl-line:hover {
 
 .summary{
   background: #ffffff;
-  display: list-item;
+  display: inline-block;
+  width: 100%;
   padding: 10px 0;
   font-size: 14px;
   font-weight: bold;
@@ -113,4 +120,19 @@ ul.selection-list li.sl-line:hover {
 .qs-scope-ALL {
   background: url('./../img/qs-none.svg') no-repeat center center;
   background-size: 100% 100%;
+}
+.results-groupBy-title{
+  padding: 5px 0 0 5px;
+}
+.btn-group-by-container{
+  display: inline-block;
+  width: 100%;
+}
+.btn-see-more-less{
+  float: left;
+  padding-left: 5px;
+}
+.btn-show-all{
+  float: right;
+  padding-right: 5px;
 }
