--- a/api/src/main/webapp/static/stylesheets/app.css
+++ b/api/src/main/webapp/static/stylesheets/app.css
@@ -369,13 +369,13 @@ ul.selection-list {
   height: 40px;
   cursor: pointer; }
 
+.sticky-navigation li.active {
+  font-weight: bold; }
+
 .dots-three-vertical {
   background: url("../img/dots-three-vertical.svg") no-repeat center; }
 
 .select-action li.selected a {
-  font-weight: bold; }
-
-.sticky-navigation li.active {
   font-weight: bold; }
 
 .topic-displayer .topic {
@@ -3281,24 +3281,22 @@ Copyright (c) 2014 Daniel Eden
 
 .details {
   background-color: white;
-  border: solid 1px;
-  margin-left: 260px;
+  border: solid 1px #CCCCCC;
+  margin-left: 270px;
   position: relative;
-  float: left;
-  width: 86%;
 }
 .cartridgeCss {
-  width: 454px;
-  border: solid 1px;
+  z-index: 10;
+  width: 500px;
+  border-left: solid 1px #CCCCCC;
+  border-bottom: solid 1px #CCCCCC;
   border-bottom: none;
-  position: absolute;
-  margin-left: 1336px;
   float: right;
 }
 .cartridge .header {
   background-color: #EEECE1;
   height: 150px;
-  border-bottom: solid 1px;
+  border-bottom: solid 1px #CCCCCC;
 }
 .cartridge .header .picture {
   float: left;
@@ -3316,7 +3314,7 @@ Copyright (c) 2014 Daniel Eden
   float: left;
   width: 100%;
   padding: 10px;
-  border-bottom: solid 1px;
+  border-bottom: solid 1px #CCCCCC;
 }
 .cartridge .field .title {
   width: 30%;
@@ -3332,20 +3330,21 @@ Copyright (c) 2014 Daniel Eden
   margin-top: 120px;
   margin-left: -85px;
 }
-#slidingContent {
-  position: relative;
+#slidingContent .slidingBloc:first-of-type {
+  border: 0;
 }
 #slidingContent h3 {
   color: grey;
-  margin-left: 20px;
+  margin: 10px 0;
 }
 #slidingContent .slidingBloc {
-  border-bottom: solid 1px;
+  border-top: solid 1px #CCCCCC;
+  padding: 5px 15px 10px 15px;
 }
 .sticky-navigation {
   background-color: white;
   width: 250px;
-  padding-left: 20px;
+  float: left;
 }
 .sticky-navigation a {
   color: black;
@@ -3375,15 +3374,17 @@ Copyright (c) 2014 Daniel Eden
   font-weight: bold;
   font-size: 16px;
 }
+/*
 #slidingContent .noBorderBottom {
   border-bottom: none;
-}
+}*/
+/*
 .slidingBloc button.btn.btn-raised.btn-primary {
   margin-top: 0;
   margin-left: 900px;
   position: relative;
   margin-bottom: 0px;
-}
+}*/
 .slidingBloc ul.selection-list li.sl-line:hover {
   background: none;
 }
@@ -3394,45 +3395,66 @@ Copyright (c) 2014 Daniel Eden
 body {
   background-color: #EEEEEE;
   font-family: "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", Calibri, Helvetica, Arial;
-  width: 1903px;
 }
 #leftMenu {
   height: 100%;
-  width: 100px;
+  width: 80px;
   top: 0;
   left: 0;
   position: fixed;
-  background-color: #1A3481;
+  background-color: rgba(8, 47, 162, 0.65);
   text-align: center;
-  padding-top: 10px;
 }
-#leftMenu img {
-  width: 40px;
-  height: 40px;
-  margin: 20px 0 20px 10px;
+#leftMenu #brand {
+  background-color: #8B8B8B;
+  padding: 2px;
+  height: 50px;
+}
+#leftMenu ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+#leftMenu ul li {
+  padding: 20px 10px;
+}
+#leftMenu ul li img {
+  /*  width: 40px;*/
   cursor: pointer;
 }
 #logo,
 #search {
-  width: 100px;
+  width: 80px;
   cursor: pointer;
 }
 #logo:hover,
 #search:hover {
   background-color: #eeeeee;
 }
-#container {
-  margin-left: 100px;
-  padding: 0;
+#pageContent {
+  margin-left: 80px;
+  position: relative;
 }
 #header {
-  height: 20px;
-  /*text-align: right;
-  border-bottom: 1px @border-color solid;*/
+  background-color: #FFF;
+  box-shadow: 0px 4px 1px #CCC;
+  padding: 5px;
+  text-align: center;
+  position: absolute;
+  left: 0;
+  right: 0;
+  z-index: 99;
+  line-height: 40px;
+  /*width: 100%;*/
+}
+#header:before {
+  content: 'header à définir';
 }
 #page {
-  margin-right: 4px;
-  padding: 10px;
+  padding: 70px 20px 20px 20px;
+  display: inline-block;
+  width: 100%;
+  min-width: 1300px;
 }
 .title-level-1 {
   font-size: 16px;
