Update search service.

--- a/ui/app/styles/detail.less
+++ b/ui/app/styles/detail.less
@@ -73,7 +73,7 @@
 }
 
 #slidingContent .slidingBloc {
-  border-top: solid 1px #CCCCCC;
+  //border-top: solid 1px #CCCCCC;
   padding: 5px 15px 10px 15px;
 }
 
