--- a/ui/app/styles/page.less
+++ b/ui/app/styles/page.less
@@ -17,9 +17,9 @@ body{
 }
 
 #leftMenu #brand {
-  background-color: #8B8B8B;
+  background-color: #009587;
   padding: 2px;
-  height: 50px;
+  height: 60px;
 }
 
 #leftMenu ul {
@@ -33,9 +33,7 @@ body{
 }
 
 #leftMenu ul li img {
-/*  width: 40px;*/
   cursor: pointer;
- // border: 1px dashed white;
 }
 
 #logo, #search {
@@ -52,9 +50,9 @@ body{
 }
 
 #header {
-  background-color: #FFF;
-  box-shadow: 0px 4px 1px #CCC;
-  padding: 5px;
+  //background-color: #FFF;
+  //box-shadow: 0px 4px 1px #CCC;
+  //padding: 5px;
   text-align: center;
   position: absolute;
   left:0;
@@ -66,7 +64,7 @@ body{
 }
 
 #header:before {
-  content: 'header à définir';
+  //content: 'header à définir';
 }
 
 #page {
