--- a/ui/app/styles/search.less
+++ b/ui/app/styles/search.less
@@ -15,8 +15,14 @@
   color: #1A3481;
 }
 
-.resultContainer{
-  width:85% !important;
+.liveFilterContainer{
+  float: none;
+  display: inline-block;
+}
+.resultContainer {
+  float: none !important;
+  margin-left: 270px;
+  position: relative;
 }
 
 .liveFilter{
@@ -127,12 +133,13 @@ ul.selection-list li.sl-line:hover {
 .btn-group-by-container{
   display: inline-block;
   width: 100%;
+  text-align: center;
 }
-.btn-see-more-less{
-  float: left;
-  padding-left: 5px;
+.btn-see-more{
+  display: inline-block;
 }
 .btn-show-all{
+  display: inline-block;
   float: right;
-  padding-right: 5px;
+  margin-right: 5px;
 }
