Add materil design, bootstrap css and js.

--- a/ui/app/styles/search.less
+++ b/ui/app/styles/search.less
@@ -30,14 +30,16 @@
 }
 
 .search-part {
-  width:63% !important;
-  float: left;
+ // width:63% !important;
+ // float: left;
 }
 
 #lineResume{
   margin-left: 10px;
   display: inline-block;
-  width: 33%;
+  width: 500px;
+  float: right;
+  padding: 2px 5px;
 }
 .movie-lineResume{
   width: 100%;
@@ -142,4 +144,8 @@ ul.selection-list li.sl-line:hover {
   display: inline-block;
   float: right;
   margin-right: 5px;
+}
+
+ul.selection-list li.sl-line div.sl-selection {
+  padding-left: 10px;
 }
