--- a/ui/app/styles/search.less
+++ b/ui/app/styles/search.less
@@ -34,12 +34,17 @@
  // float: left;
 }
 
+.search-part-preview {
+  width:70%;
+  float: left;
+}
+
 #lineResume{
-  margin-left: 10px;
-  display: inline-block;
-  width: 500px;
+  width: 28%;
   float: right;
-  padding: 2px 5px;
+}
+.line-preview-none {
+  display: none;
 }
 .movie-lineResume{
   width: 100%;
@@ -55,15 +60,22 @@
 }
 .movie-info {
   float: left;
-  width: 65%;
+  width: 55%;
 }
 
 .movie-link-detailed-sheet {
   float: left;
-  width: 20%;
+  width: 30%;
   text-align: right;
   cursor: pointer;
   text-decoration: none;
+}
+.movie-link-detailed-sheet img {
+  padding-left : 5px;
+}
+.movie-link-detailed-sheet a {
+  padding : 5px;
+  border: 1px solid #CCCCCC;
 }
 
 .movie-descrition{
@@ -148,4 +160,13 @@ ul.selection-list li.sl-line:hover {
 
 ul.selection-list li.sl-line div.sl-selection {
   padding-left: 10px;
+}
+.line-preview{
+  background-color: #FFFFFF;
+  padding: 5px 5px;
+}
+.btn-preview {
+  background: url('./../img/eye.svg') no-repeat center center;
+  box-shadow: none !important;
+  padding-top: 40px;
 }
