--- a/api/src/main/webapp/static/stylesheets/app.css
+++ b/api/src/main/webapp/static/stylesheets/app.css
@@ -78419,7 +78419,7 @@ body {
   width: 55%;
 }
 .movie-link-detailed-sheet {
-  float: left;
+  float: right;
   width: 30%;
   text-align: right;
   cursor: pointer;
