adding top menu.

--- a/ui/app/styles/search.less
+++ b/ui/app/styles/search.less
@@ -170,3 +170,18 @@ ul.selection-list li.sl-line div.sl-selection {
   box-shadow: none !important;
   padding-top: 40px;
 }
+
+.linkAdvancedSearch {
+  text-align: right;
+  padding-right: 10px;
+}
+.linkAdvancedSearch a {
+  text-decoration: none;
+  padding: 5px;
+  border: 1px solid #c4c4c4;
+  background: #f5f5f5;
+}
+.count-results {
+  font-weight: bold;
+  padding-left: 5px;
+}
