--- a/api/src/main/webapp/static/stylesheets/app.css
+++ b/api/src/main/webapp/static/stylesheets/app.css
@@ -143,6 +143,7 @@ div.qs-quick-search {
 .qs-scope-none {
   background: url('../img/qs-none.svg') no-repeat center center; }
 
+
 .checkbox-unchecked {
   background: url("../img/checkbox-unchecked.svg") no-repeat center; }
 
@@ -176,7 +177,6 @@ div.qs-quick-search {
   border-left: solid 2px; }
 .action-bar .facet-container {
   width: 400px; }
-
 
 /* Style for the list component*/
 /*variables*/
@@ -352,30 +352,6 @@ ul.selection-list {
 .timeline-body > p + p {
   margin-top: 5px; }
 
-form.form-edit {
-  border-style: solid;
-  border-width: 2px;
-  border-color: rgba(240, 89, 100, 0.65);
-  background-color: rgba(137, 108, 108, 0.14); }
-
-.icon {
-  float: left;
-  width: 40px;
-  height: 40px;
-  cursor: pointer; }
-
-.dots-three-vertical {
-  background: url("../img/dots-three-vertical.svg") no-repeat center; }
-
-.select-action li.selected a {
-  font-weight: bold; }
-
-.sticky-navigation li.active {
-  font-weight: bold; }
-
-.topic-displayer .topic {
-  background: url("../img/cross.svg") no-repeat right center; }
-
 
 /* General styles for all menus */
 .menu {
@@ -512,6 +488,30 @@ form.form-edit {
 .popin.right {
   top: 0px;
   right: 0px; }
+
+form.form-edit {
+  border-style: solid;
+  border-width: 2px;
+  border-color: rgba(240, 89, 100, 0.65);
+  background-color: rgba(137, 108, 108, 0.14); }
+
+.icon {
+  float: left;
+  width: 40px;
+  height: 40px;
+  cursor: pointer; }
+
+.dots-three-vertical {
+  background: url("../img/dots-three-vertical.svg") no-repeat center; }
+
+.select-action li.selected a {
+  font-weight: bold; }
+
+.sticky-navigation li.active {
+  font-weight: bold; }
+
+.topic-displayer .topic {
+  background: url("../img/cross.svg") no-repeat right center; }
 
 .liveFilterContainer {
   padding-right: 10px; }
@@ -78402,30 +78402,41 @@ hr {
 .menu-horizontal {
   height: 60px;
 }
-.menu {
+.menu-vertical {
+  width: 80px;
+}
+.header-menu {
   background: #3ABAAE;
 }
-.menu h3 {
+.header-menu h3 {
   color: #FFFFFF;
   font-size: 1.9em;
   padding: 10px;
   margin: 0;
   font-weight: 300;
   background: #3ABAAE;
-}
-.menu-horizontal h3 {
   width: 100px;
 }
-.menu-horizontal a {
+.header-menu a,
+.left-menu a {
   border-left: none;
+  border-bottom: none;
   width: auto;
   padding: 10px 20px;
   text-decoration: none;
   font-size: 20px;
   font-weight: bold;
 }
-.menu a:hover {
+.header-menu a:hover,
+.left-menu a:hover {
   background: #FFFFFF;
+}
+.left-menu {
+  background: #C0D1CF;
+  padding-top: 60px;
+}
+.left-menu h3 {
+  display: none;
 }
 
 body {
