--- a/ui/app/styles/page.less
+++ b/ui/app/styles/page.less
@@ -12,55 +12,22 @@ body{
   top:0;
   left:0;
   position: fixed;
-  background-color: rgba(8, 47, 162, 0.65);
   text-align: center;
-}
-
-#leftMenu #brand {
-  background-color: #009587;
-  padding: 2px;
-  height: 60px;
-}
-
-#leftMenu ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-#leftMenu ul li {
-  padding: 20px 10px;
-}
-
-#leftMenu ul li img {
-  cursor: pointer;
-}
-
-#logo, #search {
-  width: @sidebar-width;
-  cursor: pointer;
-}
-#logo:hover, #search:hover {
-  background-color: @background-color;
+  z-index: 1002;
 }
 
 #pageContent {
   margin-left: @sidebar-width;
-  position: relative;
+ /* position: relative;*/
 }
 
 #header {
-  //background-color: #FFF;
-  //box-shadow: 0px 4px 1px #CCC;
-  //padding: 5px;
   text-align: center;
   position: absolute;
   left:0;
   right: 0;
-  z-index: 99;
+  z-index: 1003;
   line-height: 40px;
-  /*width: 100%;*/
-
 }
 
 #header:before {
@@ -109,4 +76,16 @@ body{
 }
 .clear{
   clear: both;
+}
+
+.home-popin{
+  margin: 70px 0 0 90px !important;
+}
+
+.home-popin-header {
+  font-size: 16px;
+  font-weight: bold;
+  padding: 7px 7px 7px 7px;
+  background: rgb(117, 134, 138);
+  color: #ffffff;
 }
