add popin to quick search.

--- a/ui/app/styles/search.less
+++ b/ui/app/styles/search.less
@@ -30,8 +30,7 @@
 }
 
 .search-part {
- // width:63% !important;
- // float: left;
+  padding-top: 30px;
 }
 
 .search-part-preview {
@@ -184,4 +183,13 @@ ul.selection-list li.sl-line div.sl-selection {
 .count-results {
   font-weight: bold;
   padding-left: 5px;
+}
+
+.quick-search-popin{
+  margin: 10px 0 0 90px !important;
+  z-index: 1004;
+  height: 100%;
+}
+.quick-search-popin .full{
+  min-height: 100%;
 }
