--- a/ui/app/styles/menu.less
+++ b/ui/app/styles/menu.less
@@ -8,7 +8,8 @@
   width: 80px;
 }
 .header-menu {
-  background: #3ABAAE;
+  background: #C0D1CF;
+  margin-left: 80px;
 }
 
 .header-menu h3 {
@@ -17,8 +18,9 @@
   padding: 10px;
   margin: 0;
   font-weight: 300;
-  background: #3ABAAE;
+  background: #C0D1CF;
   width: @sidebar-width;
+  display: none;
 }
 
 .header-menu a,
@@ -33,14 +35,22 @@
 }
 .header-menu a:hover,
 .left-menu a:hover {
-  background: #FFFFFF;
+  background: rgba(201, 234, 230, 0.4);
 }
 
 .left-menu {
-  background: #C0D1CF;
-  padding-top: 60px;
+  background: #3ABAAE;
 }
 
-.left-menu h3 {
-  display: none;
+
+#leftMenu .brand {
+  text-align: center;
+  background-color: #000000;
+  height: 60px;
+  padding-top: 20px;
+}
+
+#leftMenu .left-menu a {
+  padding-top: 15px;
+  height: 60px;
 }
